# TrabajoGrado

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
ccds/: __init__.py  dataset.py  features.py  plots.py
ccds/modeling/: predict.py  train.py
notebooks/: eda.ipynb  tendencia.ipynb  tfmodel.ipynb
